v1.1.0/modules/schema/pages/class/SurgeArrester.adoc
= `SurgeArrester`
:toclevels: 4


+++Shunt device, installed on the network, usually in the proximity of electrical equipment in order to protect the said equipment against transient voltage transients caused by lightning or switching activity.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:SurgeArrester`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/PowerSystemResource.adoc[`PowerSystemResource`]
*** xref::class/Equipment.adoc[`Equipment`]
**** xref::class/AuxiliaryEquipment.adoc[`AuxiliaryEquipment`]
***** *`SurgeArrester`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<Terminal,`Terminal`>>
//| [[slots_table.Terminal]]<<Terminal,`Terminal`>>
| 1 +
xref::class/Terminal.adoc[`Terminal`]
| +++The Terminal at the equipment where the AuxiliaryEquipment is attached.+++
| xref::class/AuxiliaryEquipment.adoc[`AuxiliaryEquipment`]

| <<AdditionalEquipmentContainer,`AdditionalEquipmentContainer`>>
//| [[slots_table.AdditionalEquipmentContainer]]<<AdditionalEquipmentContainer,`AdditionalEquipmentContainer`>>
| 0..* +
xref::class/EquipmentContainer.adoc[`EquipmentContainer`]
| +++Additional equipment container beyond the primary equipment container.  The equipment is contained in another equipment...+++
| xref::class/Equipment.adoc[`Equipment`]

| <<ContingencyEquipment,`ContingencyEquipment`>>
//| [[slots_table.ContingencyEquipment]]<<ContingencyEquipment,`ContingencyEquipment`>>
| 0..* +
xref::class/ContingencyEquipment.adoc[`ContingencyEquipment`]
| +++The contingency equipments in which this equipment participates.+++
| xref::class/Equipment.adoc[`Equipment`]

| <<EqiupmentLimitSeriesComponent,`EqiupmentLimitSeriesComponent`>>
//| [[slots_table.EqiupmentLimitSeriesComponent]]<<EqiupmentLimitSeriesComponent,`EqiupmentLimitSeriesComponent`>>
| 0..* +
xref::class/EquipmentLimitSeriesComponent.adoc[`EquipmentLimitSeriesComponent`]
| +++Equipment limit series calculation component to which this equipment contributes.+++
| xref::class/Equipment.adoc[`Equipment`]

| <<EquipmentContainer,`EquipmentContainer`>>
//| [[slots_table.EquipmentContainer]]<<EquipmentContainer,`EquipmentContainer`>>
| 0..1 +
xref::class/EquipmentContainer.adoc[`EquipmentContainer`]
| +++Container of this equipment.+++
| xref::class/Equipment.adoc[`Equipment`]

| <<EquipmentUnavailabilitySchedule,`EquipmentUnavailabilitySchedule`>>
//| [[slots_table.EquipmentUnavailabilitySchedule]]<<EquipmentUnavailabilitySchedule,`EquipmentUnavailabilitySchedule`>>
| 0..* +
xref::class/EquipmentUnavailabilitySchedule.adoc[`EquipmentUnavailabilitySchedule`]
| _n/a_
| xref::class/Equipment.adoc[`Equipment`]

| <<Faults,`Faults`>>
//| [[slots_table.Faults]]<<Faults,`Faults`>>
| 0..* +
xref::class/Fault.adoc[`Fault`]
| +++All faults on this equipment.+++
| xref::class/Equipment.adoc[`Equipment`]

| <<LimitDependencyModel,`LimitDependencyModel`>>
//| [[slots_table.LimitDependencyModel]]<<LimitDependencyModel,`LimitDependencyModel`>>
| 0..* +
xref::class/LimitDependency.adoc[`LimitDependency`]
| +++Limit dependencymodels organized under this equipment as a means for organizing the model in a tree view.+++
| xref::class/Equipment.adoc[`Equipment`]

| <<OperationalLimitSet,`OperationalLimitSet`>>
//| [[slots_table.OperationalLimitSet]]<<OperationalLimitSet,`OperationalLimitSet`>>
| 0..* +
xref::class/OperationalLimitSet.adoc[`OperationalLimitSet`]
| +++The operational limit sets associated with this equipment.+++
| xref::class/Equipment.adoc[`Equipment`]

| <<OperationalRestrictions,`OperationalRestrictions`>>
//| [[slots_table.OperationalRestrictions]]<<OperationalRestrictions,`OperationalRestrictions`>>
| 0..* +
xref::class/OperationalRestriction.adoc[`OperationalRestriction`]
| +++All operational restrictions for this equipment.+++
| xref::class/Equipment.adoc[`Equipment`]

| <<Outages,`Outages`>>
//| [[slots_table.Outages]]<<Outages,`Outages`>>
| 0..* +
xref::class/Outage.adoc[`Outage`]
| +++All outages in which this equipment is involved.+++
| xref::class/Equipment.adoc[`Equipment`]

| <<PinEquipment,`PinEquipment`>>
//| [[slots_table.PinEquipment]]<<PinEquipment,`PinEquipment`>>
| 0..* +
xref::class/PinEquipment.adoc[`PinEquipment`]
| _n/a_
| xref::class/Equipment.adoc[`Equipment`]

| <<ProtectiveActionEquipment,`ProtectiveActionEquipment`>>
//| [[slots_table.ProtectiveActionEquipment]]<<ProtectiveActionEquipment,`ProtectiveActionEquipment`>>
| 0..* +
xref::class/ProtectiveActionEquipment.adoc[`ProtectiveActionEquipment`]
| +++Protective action is controlling equipment. This can be direct signals from the control center, or emulation of action done...+++
| xref::class/Equipment.adoc[`Equipment`]

| <<UsagePoints,`UsagePoints`>>
//| [[slots_table.UsagePoints]]<<UsagePoints,`UsagePoints`>>
| 0..* +
xref::class/UsagePoint.adoc[`UsagePoint`]
| +++All usage points connected to the electrical grid through this equipment.+++
| xref::class/Equipment.adoc[`Equipment`]

| <<WeatherStation,`WeatherStation`>>
//| [[slots_table.WeatherStation]]<<WeatherStation,`WeatherStation`>>
| 0..* +
xref::class/WeatherStation.adoc[`WeatherStation`]
| _n/a_
| xref::class/Equipment.adoc[`Equipment`]

| <<aggregate,`aggregate`>>
//| [[slots_table.aggregate]]<<aggregate,`aggregate`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++The aggregate flag provides an alternative way of representing an aggregated (equivalent) element. It is applicable in cases...+++
| xref::class/Equipment.adoc[`Equipment`]

| <<inService,`inService`>>
//| [[slots_table.inService]]<<inService,`inService`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Specifies the availability of the equipment. True means the equipment is available for topology processing, which determines...+++
| xref::class/Equipment.adoc[`Equipment`]

| <<networkAnalysisEnabled,`networkAnalysisEnabled`>>
//| [[slots_table.networkAnalysisEnabled]]<<networkAnalysisEnabled,`networkAnalysisEnabled`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++The equipment is enabled to participate in network analysis.  If unspecified, the value is assumed to be true.+++
| xref::class/Equipment.adoc[`Equipment`]

| <<normallyInService,`normallyInService`>>
//| [[slots_table.normallyInService]]<<normallyInService,`normallyInService`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Specifies the availability of the equipment under normal operating conditions. True means the equipment is available for...+++
| xref::class/Equipment.adoc[`Equipment`]

| <<AssetDatasheet,`AssetDatasheet`>>
//| [[slots_table.AssetDatasheet]]<<AssetDatasheet,`AssetDatasheet`>>
| 0..1 +
xref::class/AssetInfo.adoc[`AssetInfo`]
| +++Datasheet information for this power system resource.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<Assets,`Assets`>>
//| [[slots_table.Assets]]<<Assets,`Assets`>>
| 0..* +
xref::class/Asset.adoc[`Asset`]
| +++All assets represented by this power system resource. For example, multiple conductor assets are electrically modelled as a...+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<Clearances,`Clearances`>>
//| [[slots_table.Clearances]]<<Clearances,`Clearances`>>
| 0..* +
xref::class/ClearanceDocument.adoc[`ClearanceDocument`]
| +++All clearances applicable to this power system resource.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<ConfigurationEvent,`ConfigurationEvent`>>
//| [[slots_table.ConfigurationEvent]]<<ConfigurationEvent,`ConfigurationEvent`>>
| 0..* +
xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]
| +++All configuration events created for this Power System resource.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<Controls,`Controls`>>
//| [[slots_table.Controls]]<<Controls,`Controls`>>
| 0..* +
xref::class/Control.adoc[`Control`]
| +++The controller outputs used to actually govern a regulating device, e.g. the magnetization of a synchronous machine or...+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<GenericAction,`GenericAction`>>
//| [[slots_table.GenericAction]]<<GenericAction,`GenericAction`>>
| 0..* +
xref::class/GenericAction.adoc[`GenericAction`]
| +++The generic action that is performed on the power system resource+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<Location,`Location`>>
//| [[slots_table.Location]]<<Location,`Location`>>
| 0..1 +
xref::class/Location.adoc[`Location`]
| +++Location of this power system resource.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<Measurements,`Measurements`>>
//| [[slots_table.Measurements]]<<Measurements,`Measurements`>>
| 0..* +
xref::class/Measurement.adoc[`Measurement`]
| +++The measurements associated with this power system resource.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<OperatingShare,`OperatingShare`>>
//| [[slots_table.OperatingShare]]<<OperatingShare,`OperatingShare`>>
| 0..* +
xref::class/OperatingShare.adoc[`OperatingShare`]
| +++The operating shares of this power system resource.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<OperationalTags,`OperationalTags`>>
//| [[slots_table.OperationalTags]]<<OperationalTags,`OperationalTags`>>
| 0..* +
xref::class/OperationalTag.adoc[`OperationalTag`]
| +++All operational tags placed on this power system resource.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<PSREvents,`PSREvents`>>
//| [[slots_table.PSREvents]]<<PSREvents,`PSREvents`>>
| 0..* +
xref::class/PSREvent.adoc[`PSREvent`]
| +++All events associated with this power system resource.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<PSRType,`PSRType`>>
//| [[slots_table.PSRType]]<<PSRType,`PSRType`>>
| 0..1 +
xref::class/PSRType.adoc[`PSRType`]
| +++Custom classification for this power system resource.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<ReportingGroup,`ReportingGroup`>>
//| [[slots_table.ReportingGroup]]<<ReportingGroup,`ReportingGroup`>>
| 0..* +
xref::class/ReportingGroup.adoc[`ReportingGroup`]
| +++Reporting groups to which this power system resource belongs.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<VerificationAction,`VerificationAction`>>
//| [[slots_table.VerificationAction]]<<VerificationAction,`VerificationAction`>>
| 0..* +
xref::class/VerificationAction.adoc[`VerificationAction`]
| +++The verification action that is performed on the power system resource+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#AdditionalEquipmentContainer]
=== `AdditionalEquipmentContainer`
+++Additional equipment container beyond the primary equipment container.  The equipment is contained in another equipment container, but also grouped with this equipment container.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.AdditionalEquipmentContainer`
| Cardinality
| 0..*
| Type
| xref::class/EquipmentContainer.adoc[`EquipmentContainer`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.AdditionalEquipmentContainer,&#10548;>>
--
////


//[discrete]
[#aggregate]
=== `aggregate`
+++The aggregate flag provides an alternative way of representing an aggregated (equivalent) element. It is applicable in cases when the dedicated classes for equivalent equipment do not have all of the attributes necessary to represent the required level of detail.  In case the flag is set to “true” the single instance of equipment represents multiple pieces of equipment that have been modelled together as an aggregate equivalent obtained by a network reduction procedure. Examples would be power transformers or synchronous machines operating in parallel modelled as a single aggregate power transformer or aggregate synchronous machine.  
The attribute is not used for EquivalentBranch, EquivalentShunt and EquivalentInjection.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.aggregate`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.aggregate,&#10548;>>
--
////


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#AssetDatasheet]
=== `AssetDatasheet`
+++Datasheet information for this power system resource.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.AssetDatasheet`
| Cardinality
| 0..1
| Type
| xref::class/AssetInfo.adoc[`AssetInfo`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.AssetDatasheet,&#10548;>>
--
////


//[discrete]
[#Assets]
=== `Assets`
+++All assets represented by this power system resource. For example, multiple conductor assets are electrically modelled as a single AC line segment.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Assets`
| Cardinality
| 0..*
| Type
| xref::class/Asset.adoc[`Asset`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.Assets,&#10548;>>
--
////


//[discrete]
[#Clearances]
=== `Clearances`
+++All clearances applicable to this power system resource.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Clearances`
| Cardinality
| 0..*
| Type
| xref::class/ClearanceDocument.adoc[`ClearanceDocument`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.Clearances,&#10548;>>
--
////


//[discrete]
[#ConfigurationEvent]
=== `ConfigurationEvent`
+++All configuration events created for this Power System resource.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.ConfigurationEvent`
| Cardinality
| 0..*
| Type
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.ConfigurationEvent,&#10548;>>
--
////


//[discrete]
[#ContingencyEquipment]
=== `ContingencyEquipment`
+++The contingency equipments in which this equipment participates.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.ContingencyEquipment`
| Cardinality
| 0..*
| Type
| xref::class/ContingencyEquipment.adoc[`ContingencyEquipment`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.ContingencyEquipment,&#10548;>>
--
////


//[discrete]
[#Controls]
=== `Controls`
+++The controller outputs used to actually govern a regulating device, e.g. the magnetization of a synchronous machine or capacitor bank breaker actuator.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Controls`
| Cardinality
| 0..*
| Type
| xref::class/Control.adoc[`Control`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.Controls,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#EqiupmentLimitSeriesComponent]
=== `EqiupmentLimitSeriesComponent`
+++Equipment limit series calculation component to which this equipment contributes.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.EqiupmentLimitSeriesComponent`
| Cardinality
| 0..*
| Type
| xref::class/EquipmentLimitSeriesComponent.adoc[`EquipmentLimitSeriesComponent`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.EqiupmentLimitSeriesComponent,&#10548;>>
--
////


//[discrete]
[#EquipmentContainer]
=== `EquipmentContainer`
+++Container of this equipment.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.EquipmentContainer`
| Cardinality
| 0..1
| Type
| xref::class/EquipmentContainer.adoc[`EquipmentContainer`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.EquipmentContainer,&#10548;>>
--
////


//[discrete]
[#EquipmentUnavailabilitySchedule]
=== `EquipmentUnavailabilitySchedule`



[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.EquipmentUnavailabilitySchedule`
| Cardinality
| 0..*
| Type
| xref::class/EquipmentUnavailabilitySchedule.adoc[`EquipmentUnavailabilitySchedule`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.EquipmentUnavailabilitySchedule,&#10548;>>
--
////


//[discrete]
[#Faults]
=== `Faults`
+++All faults on this equipment.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.Faults`
| Cardinality
| 0..*
| Type
| xref::class/Fault.adoc[`Fault`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.Faults,&#10548;>>
--
////


//[discrete]
[#GenericAction]
=== `GenericAction`
+++The generic action that is performed on the power system resource+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.GenericAction`
| Cardinality
| 0..*
| Type
| xref::class/GenericAction.adoc[`GenericAction`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.GenericAction,&#10548;>>
--
////


//[discrete]
[#inService]
=== `inService`
+++Specifies the availability of the equipment. True means the equipment is available for topology processing, which determines if the equipment is energized or not. False means that the equipment is treated by network applications as if it is not in the model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.inService`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.inService,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#LimitDependencyModel]
=== `LimitDependencyModel`
+++Limit dependencymodels organized under this equipment as a means for organizing the model in a tree view.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.LimitDependencyModel`
| Cardinality
| 0..*
| Type
| xref::class/LimitDependency.adoc[`LimitDependency`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.LimitDependencyModel,&#10548;>>
--
////


//[discrete]
[#Location]
=== `Location`
+++Location of this power system resource.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Location`
| Cardinality
| 0..1
| Type
| xref::class/Location.adoc[`Location`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.Location,&#10548;>>
--
////


//[discrete]
[#Measurements]
=== `Measurements`
+++The measurements associated with this power system resource.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Measurements`
| Cardinality
| 0..*
| Type
| xref::class/Measurement.adoc[`Measurement`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.Measurements,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#networkAnalysisEnabled]
=== `networkAnalysisEnabled`
+++The equipment is enabled to participate in network analysis.  If unspecified, the value is assumed to be true.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.networkAnalysisEnabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.networkAnalysisEnabled,&#10548;>>
--
////


//[discrete]
[#normallyInService]
=== `normallyInService`
+++Specifies the availability of the equipment under normal operating conditions. True means the equipment is available for topology processing, which determines if the equipment is energized or not. False means that the equipment is treated by network applications as if it is not in the model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.normallyInService`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.normallyInService,&#10548;>>
--
////


//[discrete]
[#OperatingShare]
=== `OperatingShare`
+++The operating shares of this power system resource.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.OperatingShare`
| Cardinality
| 0..*
| Type
| xref::class/OperatingShare.adoc[`OperatingShare`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.OperatingShare,&#10548;>>
--
////


//[discrete]
[#OperationalLimitSet]
=== `OperationalLimitSet`
+++The operational limit sets associated with this equipment.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.OperationalLimitSet`
| Cardinality
| 0..*
| Type
| xref::class/OperationalLimitSet.adoc[`OperationalLimitSet`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.OperationalLimitSet,&#10548;>>
--
////


//[discrete]
[#OperationalRestrictions]
=== `OperationalRestrictions`
+++All operational restrictions for this equipment.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.OperationalRestrictions`
| Cardinality
| 0..*
| Type
| xref::class/OperationalRestriction.adoc[`OperationalRestriction`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.OperationalRestrictions,&#10548;>>
--
////


//[discrete]
[#OperationalTags]
=== `OperationalTags`
+++All operational tags placed on this power system resource.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.OperationalTags`
| Cardinality
| 0..*
| Type
| xref::class/OperationalTag.adoc[`OperationalTag`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.OperationalTags,&#10548;>>
--
////


//[discrete]
[#Outages]
=== `Outages`
+++All outages in which this equipment is involved.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.Outages`
| Cardinality
| 0..*
| Type
| xref::class/Outage.adoc[`Outage`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.Outages,&#10548;>>
--
////


//[discrete]
[#PinEquipment]
=== `PinEquipment`



[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.PinEquipment`
| Cardinality
| 0..*
| Type
| xref::class/PinEquipment.adoc[`PinEquipment`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.PinEquipment,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#ProtectiveActionEquipment]
=== `ProtectiveActionEquipment`
+++Protective action is controlling equipment. This can be direct signals from the control center, or emulation of action done by protection equipment.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.ProtectiveActionEquipment`
| Cardinality
| 0..*
| Type
| xref::class/ProtectiveActionEquipment.adoc[`ProtectiveActionEquipment`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.ProtectiveActionEquipment,&#10548;>>
--
////


//[discrete]
[#PSREvents]
=== `PSREvents`
+++All events associated with this power system resource.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.PSREvents`
| Cardinality
| 0..*
| Type
| xref::class/PSREvent.adoc[`PSREvent`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.PSREvents,&#10548;>>
--
////


//[discrete]
[#PSRType]
=== `PSRType`
+++Custom classification for this power system resource.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.PSRType`
| Cardinality
| 0..1
| Type
| xref::class/PSRType.adoc[`PSRType`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.PSRType,&#10548;>>
--
////


//[discrete]
[#ReportingGroup]
=== `ReportingGroup`
+++Reporting groups to which this power system resource belongs.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.ReportingGroup`
| Cardinality
| 0..*
| Type
| xref::class/ReportingGroup.adoc[`ReportingGroup`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.ReportingGroup,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#Terminal]
=== `Terminal`
+++The Terminal at the equipment where the AuxiliaryEquipment is attached.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AuxiliaryEquipment.Terminal`
| Cardinality
| 1
| Type
| xref::class/Terminal.adoc[`Terminal`]

| Inherited from
| xref::class/AuxiliaryEquipment.adoc[`AuxiliaryEquipment`]


|===

////
[.text-left]
--
<<slots_table.Terminal,&#10548;>>
--
////


//[discrete]
[#UsagePoints]
=== `UsagePoints`
+++All usage points connected to the electrical grid through this equipment.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.UsagePoints`
| Cardinality
| 0..*
| Type
| xref::class/UsagePoint.adoc[`UsagePoint`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.UsagePoints,&#10548;>>
--
////


//[discrete]
[#VerificationAction]
=== `VerificationAction`
+++The verification action that is performed on the power system resource+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.VerificationAction`
| Cardinality
| 0..*
| Type
| xref::class/VerificationAction.adoc[`VerificationAction`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.VerificationAction,&#10548;>>
--
////


//[discrete]
[#WeatherStation]
=== `WeatherStation`



[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.WeatherStation`
| Cardinality
| 0..*
| Type
| xref::class/WeatherStation.adoc[`WeatherStation`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.WeatherStation,&#10548;>>
--
////





== Used by


This class is not used by any other classes as the range of a slot.
